--- a/docs/source/user_guide/components.ipynb
+++ b/docs/source/user_guide/components.ipynb
@@ -159,7 +159,7 @@
     "    name = \"Drop Null Columns Transformer\"\n",
     "    hyperparameter_ranges = {}\n",
     "\n",
-    "    def __init__(self, pct_null_threshold=1.0, random_state=0, **kwargs):\n",
+    "    def __init__(self, pct_null_threshold=1.0, random_seed=0, **kwargs):\n",
     "        \"\"\"Initalizes an transformer to drop features whose percentage of NaN values exceeds a specified threshold.\n",
     "\n",
     "        Arguments:\n",
@@ -175,7 +175,7 @@
     "        self._cols_to_drop = None\n",
     "        super().__init__(parameters=parameters,\n",
     "                         component_obj=None,\n",
-    "                         random_state=random_state)\n",
+    "                         random_seed=random_seed)\n",
     "\n",
     "    def fit(self, X, y=None):\n",
     "        \"\"\"Fits DropNullColumns component to data\n",
@@ -224,7 +224,7 @@
     "\n",
     "Likewise, there are select methods you need to override as `Transformer` is an abstract base class:\n",
     "\n",
-    "-  `__init__()` - the `__init__()` method of your transformer will need to call `super().__init__()` and pass three parameters in: a `parameters` dictionary holding the parameters to the component, the `component_obj`, and the `random_state` value. You can see that `component_obj` is set to `None` above and we will discuss `component_obj` in depth later on.\n",
+    "-  `__init__()` - the `__init__()` method of your transformer will need to call `super().__init__()` and pass three parameters in: a `parameters` dictionary holding the parameters to the component, the `component_obj`, and the `random_seed` value. You can see that `component_obj` is set to `None` above and we will discuss `component_obj` in depth later on.\n",
     "\n",
     "- `fit()` - the `fit()` method is responsible for fitting your component on training data. It should return the component object.\n",
     "\n",
@@ -266,12 +266,12 @@
     "    model_family = ModelFamily.BASELINE\n",
     "    supported_problem_types = [ProblemTypes.REGRESSION, ProblemTypes.TIME_SERIES_REGRESSION]\n",
     "\n",
-    "    def __init__(self, strategy=\"mean\", random_state=0, **kwargs):\n",
+    "    def __init__(self, strategy=\"mean\", random_seed=0, **kwargs):\n",
     "        \"\"\"Baseline regressor that uses a simple strategy to make predictions.\n",
     "\n",
     "        Arguments:\n",
     "            strategy (str): Method used to predict. Valid options are \"mean\", \"median\". Defaults to \"mean\".\n",
-    "            random_state (int): Seed for the random number generator. Defaults to 0.\n",
+    "            random_seed (int): Seed for the random number generator. Defaults to 0.\n",
     "\n",
     "        \"\"\"\n",
     "        if strategy not in [\"mean\", \"median\"]:\n",
@@ -283,7 +283,7 @@
     "        self._num_features = None\n",
     "        super().__init__(parameters=parameters,\n",
     "                         component_obj=None,\n",
-    "                         random_state=random_state)\n",
+    "                         random_seed=random_seed)\n",
     "\n",
     "    def fit(self, X, y=None):\n",
     "        if y is None:\n",
@@ -349,7 +349,7 @@
    "source": [
     "#### Required methods\n",
     "\n",
-    "-  `__init__()` - the `__init__()` method of your estimator will need to call `super().__init__()` and pass three parameters in: a `parameters` dictionary holding the parameters to the component, the `component_obj`, and the `random_state` value.\n",
+    "-  `__init__()` - the `__init__()` method of your estimator will need to call `super().__init__()` and pass three parameters in: a `parameters` dictionary holding the parameters to the component, the `component_obj`, and the `random_seed` value.\n",
     "\n",
     "- `fit()` - the `fit()` method is responsible for fitting your component on training data.\n",
     "\n",
@@ -389,7 +389,7 @@
     "    model_family = ModelFamily.LINEAR_MODEL\n",
     "    supported_problem_types = [ProblemTypes.REGRESSION]\n",
     "\n",
-    "    def __init__(self, fit_intercept=True, normalize=False, n_jobs=-1, random_state=0, **kwargs):\n",
+    "    def __init__(self, fit_intercept=True, normalize=False, n_jobs=-1, random_seed=0, **kwargs):\n",
     "        parameters = {\n",
     "            'fit_intercept': fit_intercept,\n",
     "            'normalize': normalize,\n",
@@ -399,7 +399,7 @@
     "        linear_regressor = SKLinearRegression(**parameters)\n",
     "        super().__init__(parameters=parameters,\n",
     "                         component_obj=linear_regressor,\n",
-    "                         random_state=random_state)\n",
+    "                         random_seed=random_seed)\n",
     "\n",
     "    @property\n",
     "    def feature_importance(self):\n",
