--- a/docs/source/user_guide/pipelines.ipynb
+++ b/docs/source/user_guide/pipelines.ipynb
@@ -72,12 +72,12 @@
     "        \"parameter_1\":['a', 'b', 'c']\n",
     "    }\n",
     "    \n",
-    "    def __init__(self, parameter_1, random_state):\n",
+    "    def __init__(self, parameter_1, random_seed):\n",
     "        transformer = ThirdPartyTransformer(parameter_1)\n",
     "        parameters = {\"parameter_1\": parameter_1}\n",
     "        super().__init__(parameters=parameters,\n",
     "                         component_obj=transformer,\n",
-    "                         random_state=random_state)\n",
+    "                         random_seed=random_seed)\n",
     "    \n",
     "class CustomComponentMulticlassClassificationPipeline(MulticlassClassificationPipeline):\n",
     "    component_graph = [NewTransformer, 'Random Forest Classifier']"
@@ -219,7 +219,7 @@
     "        }\n",
     "    }\n",
     "\n",
-    "cp = CustomPipeline(parameters=parameters, random_state=5)\n"
+    "cp = CustomPipeline(parameters=parameters, random_seed=5)\n"
    ]
   },
   {
@@ -396,7 +396,7 @@
     "    name = \"My Drop Null Columns Transformer\"\n",
     "    hyperparameter_ranges = {}\n",
     "\n",
-    "    def __init__(self, pct_null_threshold=1.0, random_state=0, **kwargs):\n",
+    "    def __init__(self, pct_null_threshold=1.0, random_seed=0, **kwargs):\n",
     "        \"\"\"Initalizes an transformer to drop features whose percentage of NaN values exceeds a specified threshold.\n",
     "\n",
     "        Arguments:\n",
@@ -412,7 +412,7 @@
     "        self._cols_to_drop = None\n",
     "        super().__init__(parameters=parameters,\n",
     "                         component_obj=None,\n",
-    "                         random_state=random_state)\n",
+    "                         random_seed=random_seed)\n",
     "\n",
     "    def fit(self, X, y=None):\n",
     "        pct_null_threshold = self.parameters[\"pct_null_threshold\"]\n",
